# mysql-replica

./: .flake8  pyproject.toml
mysql_replica/: filepos_logger.py  gtid_logger.py  replica.py  targetdb.py
