[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysql-replica"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "mysql-replication",
    "tenacity"
]

[tool.hatch.version]
path = "mysql_replica/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/mysql_replica",
]

[tool.black]
line-length = 120
skip-string-normalization = true
